@@ -24,9 +24,11 @@
 
 extern void cob_init_call (void);
 extern void *cob_resolve (const char *name);
+extern void *cob_resolve_1 (const char *name);
 extern const char *cob_resolve_error (void);
 
 extern void *cob_call_resolve (cob_field *f);
+extern void *cob_call_resolve_1 (cob_field *f);
 #ifdef __GNUC__
 extern void cob_call_error (void) __attribute__ ((noreturn));
 #else
